[add] Inquirer and Commander

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/jvnp/node-cli/issues"
   },
-  "homepage": "https://github.com/jvnp/node-cli#readme"
+  "homepage": "https://github.com/jvnp/node-cli#readme",
+  "dependencies": {
+    "commander": "^9.3.0",
+    "inquirer": "^8.2.4"
+  }
 }
